# malaria-detection

./: .gitignore
app/backend/: .gitignore  README.md  package-lock.json  package.json  server.js
app/backend/src/: app.js
app/backend/src/config/: db.js
app/backend/src/features/auth/controllers/: authController.js
app/backend/src/features/auth/middleware/: authMiddleware.js
app/backend/src/features/auth/routes/: authRoutes.js
app/backend/src/features/malaria/controllers/: malariaController.js
app/backend/src/features/malaria/middleware/: uploadMiddleware.js
app/backend/src/features/malaria/routes/: malariaRoutes.js
app/backend/src/middleware/: errorHandler.js
app/backend/src/services/: aiService.js  imagekitService.js
app/frontend/: app.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/frontend/app/: _layout.jsx  index.jsx  login.jsx  next.jsx  scan.jsx  signup.jsx
app/frontend/src/features/auth/api/: index.js
app/frontend/src/features/auth/hooks/: useLogin.js  useNextSteps.js  useSignup.js
app/frontend/src/shared/components/: Button.jsx
app/frontend/src/shared/config/: api.js
app/frontend/src/shared/utils/: index.js
app/frontend/src/store/: index.js
malaria_detection_project/: README.md  pyproject.toml  requirements.txt
malaria_detection_project/app/: main.py
malaria_detection_project/app/api/: predict.py
malaria_detection_project/app/services/: model_loader.py
malaria_detection_project/app/utils/: image_preprocess.py
malaria_detection_project/training/: dataset_loader.py  train_model.py
(+18 files in other folders)
